salesforce-integration/Salesforce Components/objects/mautic_timeline__c/mautic_timeline__c.object-meta.xml
<CustomObject>
    <label>Timeline</label>
    <nameField>
        <label>Timeline ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>