salesforce-integration/Salesforce Components/objects/mautic_timeline__c/fields/contact_id__c.field-meta.xml
<CustomField>
    <fullName>contact_id__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timeline</relationshipLabel>
    <relationshipName>Timelines_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>