salesforce-integration/Salesforce Components/objects/mautic_timeline__c/fields/Mautic_url__c.field-meta.xml
<CustomField>
    <fullName>Mautic_url__c</fullName>
    <label>Mautic URL</label>
    <type>Url</type>
</CustomField>