salesforce-integration/Salesforce Components/objects/mautic_timeline__c/fields/MauticLead__c.field-meta.xml
<CustomField>
    <fullName>MauticLead__c</fullName>
    <label>Mautic Contact ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>