salesforce-integration/Salesforce Components/objects/mautic_timeline__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <externalId>true</externalId>
    <label>Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>